DD-1261 BUG - FED - Application library alignment issue
* Adding a new multi-form CSS class to pinch and give space to the form and fieldset
* Adding a primary colour text highlight and applying to the form results

--- a/Boilerplate/src/sass/base/_type.scss
+++ b/Boilerplate/src/sass/base/_type.scss
@@ -23,6 +23,7 @@ a {
     color: currentColor;
 }
 
+.text--primary,
 a:focus,
 a:hover,
 a.js-focus {
